--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/drawer": "^6.5.7",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
+    "axios": "^1.2.2",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-dotenv": "^3.4.7",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-reanimated": "^2.14.1",
     "react-native-safe-area-context": "^4.4.1",
